# snek

./: .gitignore  CLAUDE.md  FALSIFY.md  IMPLEMENTATION.md  LICENSE  WORKFLOW.md  build.zig  build.zig.zon  design.md  pyproject.toml  setup.py
.claude/: settings.json
bench/: Dockerfile  Dockerfile.profile  README.md  buffer_comparison.zig  compare.py  compare.sh  deque_comparison.zig  eventloop_control_server.py  eventloop_echo_bench.py  eventloop_echo_server.py  eventloop_http_bench.py  eventloop_microbench.py  eventloop_regression_check.py  hello_server.zig  io_backend_comparison.zig  io_uring_benchmark.zig  json_escape.zig  kqueue_benchmark.zig  pool_comparison.zig  profile.sh  redis_alloc_comparison.zig  run.sh  run_comparison.sh  run_eventloop.sh
bench/compose/: Dockerfile  app.py  docker-compose.yml  run_scenario.sh  snek_app.py  snek_db_app.py  snek_redis_app.py
docs/: GAPS_ANALYSIS.md  GAPS_RESEARCH.md
specs/: scheduler.cfg  scheduler.tla  scheduler_worker_gap_audit.md  scheduler_worker_gap_audit_status.md  scheduler_worker_gap_benchmark_verification_plan.md  worker_lifecycle.cfg  worker_lifecycle.tla  worker_lifecycle_review.md  zap_comparison.md
src/: acceptor.zig  connection.zig  handler.zig  hello_server.zig  integration_test.zig  io.zig  lib.zig  log.zig  main.zig  pipeline.zig  pipeline_kq.zig  pipeline_kq_dispatch.zig  pipeline_uring.zig  pipeline_uring_dispatch.zig  pool.zig  response_hint.zig  root.zig  runtime.zig  server.zig  server2.zig  server_only.zig  snek_runner.zig  socket.zig  task.zig  zero_copy.zig
tests/: REFERENCES_verification.md
(+238 files in other folders)
